[package]
authors = ["Marirs <marirs@gmail.com>"]
categories = ["api-bindings"]
description = "VirusTotal REST API v3 (Public & Enterprise)"
edition = "2021"
exclude = ["data", "examples"]
keywords = ["api", "v3", "virustotal"]
license-file = "LICENSE"
name = "async_vt3"
readme = "README.md"
repository = "https://github.com/marirs/vt3-rs"
version = "0.8.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-compression = { version = "^0.4", default-features = false, features = ["bzip2", "tokio"] }
base64 = "0.22"
bzip2 = { version = "^0.6", optional = true, default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "^0.13", default-features = false, features = ["form", "json", "multipart", "query", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "^1.52", default-features = false }
tokio-util = { version = "^0.7", default-features = false, features = ["io"] }

[dev-dependencies]
tokio = { version = "^1.52", features = ["full"] }
tokio-test = "0.4.4"

[features]
all = ["enterprise", "feeds", "hunting"]
enterprise = []
feeds = ["bzip2"]
hunting = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3

[[example]]
name = "user_info"
path = "examples/enterprise/user_info.rs"
required-features = ["enterprise"]

[[example]]
name = "api_usage"
path = "examples/enterprise/api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "overall_quotas"
path = "examples/enterprise/overall_quotas.rs"
required-features = ["enterprise"]

[[example]]
name = "group_info"
path = "examples/enterprise/group_info.rs"
required-features = ["enterprise"]

[[example]]
name = "group_members"
path = "examples/enterprise/group_members.rs"
required-features = ["enterprise"]

[[example]]
name = "group_api_usage"
path = "examples/enterprise/group_api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "retrohunt_jobs"
path = "examples/hunting/retrohunt_jobs.rs"
required-features = ["hunting"]

[[example]]
name = "livehunt_get_rulesets"
path = "examples/hunting/livehunt_get_rulesets.rs"
required-features = ["hunting"]
